# quick-rust-with-ai

./: README.md  README_zh.md
ch01/: ch01.md  ch01_zh.md
ch01/lu1l/: Cargo.toml  README.md
ch02/: ch02.md  ch02_zh.md
ch02/b1l/: Cargo.toml  Dockerfile  README.md
ch02/b1l/examples/: b1lut0.rs
ch02/b1l/src/: main.rs
ch03/: ch03.md  ch03_zh.md
ch03/mem-match/: Cargo.toml  Embed.toml  README.md
ch03/mem-match/src/: main.rs
esp32c3_wifi/: .gitignore  README.md
esp32c3_wifi/.github/: bwifi.test.yaml
esp32c3_wifi/.github/workflows/: ci.yml  docker_image.yml
esp32c3_wifi/bwifi/: Cargo.toml  cfg.toml.example
esp32c3_wifi/esp32c3/bwifi/: Cargo.toml  wokwi.toml
ripple/: Cargo.toml  README.md
ripple/src/: main.rs
scroll_txt/: Cargo.toml  README.md
scroll_txt/examples/: extract_fns.rs
scroll_txt/src/: main.rs
sleeping/: Cargo.toml  README.md
sleeping/src/: main.rs
