[package]
name = "mem-match"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3", features = ["print-rtt"] }
microbit-v2 = "0.12.0"
embedded-hal = "0.2.5"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
critical-section = "1.2.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }